# raytracing-in-one-week

./: .gitignore  CMakeLists.txt  README.md  TODO.md
examples/: 1-vec-and-color.md  2-viewport-and-camera.md  3-hittable_list-and-nomal_vec.md  4-antialiasing.md  5-diffusion.md  6-materials.md  7-dielectric.md  8-fov-and-viewport-placement.md  9-defocus-blur.md
include/: camera.hpp  color.hpp  fn_cpp_helper.hpp  generate_data.hpp  globals.hpp  hit_record.hpp  hittable_list.hpp  interval.hpp  lambertian.hpp  pipeline_helper.hpp  ray.hpp  sphere.hpp  utiltools.hpp  vec3.hpp  viewport.hpp
include/hittables/: sphere.hpp
include/materials/: dielectric.hpp  lambertian.hpp  material_t.hpp  metal.hpp
src/: color.cc  hittable_list.cc  main.cc  ray.cc  sphere.cc  vec3.cc  viewport.cc
